--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,4 @@ services:
       - "go-server"
     environment:
       GO_SERVER_URL: http://go-server:8153/go
+      AGENT_AUTO_REGISTER_KEY: '5c4ca590-55b2-4c48-b00a-e54c62704333'
