--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     build:
       context: ./gocd-agent
     restart: always
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     links:
       - "go-server"
     depends_on:
