--- a/gocd-agent/Dockerfile
+++ b/gocd-agent/Dockerfile
@@ -24,10 +24,10 @@ RUN chown -R go /opt/nikto/
 #Install trivy
 RUN mkdir -p /opt/trivycache
 RUN chown -R go /opt/trivycache
-RUN wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
-RUN echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
+RUN wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | apt-key add -
+RUN echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | tee -a /etc/apt/sources.list.d/trivy.list
 RUN apt-get update
-RUN apt-get install trivy
+RUN apt-get install trivy -y
 
 #Install the git history checker for secrets
 RUN pip3 install trufflehog
